First meaningfull content

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang=en>
+<html lang=de>
 <head>
 <meta charset=utf-8>
-<title>blah</title>
+<title>Schiibe Chlöpfer</title>
 </head>
 <body>
-<p>I'm the content</p>
+<p>Chlöpf dini Schiibe di ganzi Nacht, chlöpf sie di ganzi Nacht!</p>
 </body>
 </html>
