--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang=de>
-<head>
-<meta charset=utf-8>
-<title>Schiibe Chlöpfer</title>
-</head>
-<body>
-<p>Chlöpf dini Schiibe di ganzi Nacht, chlöpf sie di ganzi Nacht!</p>
-</body>
+    <head>
+    <meta charset=utf-8>
+    <title>Schiibe Chlöpfer</title>
+    </head>
+    <body>
+        <h1>Schiibe Chlöpfer Zürcher Oberland</h1>
+        <p>Chlöpf dini Schiibe di ganzi Nacht, chlöpf sie di ganzi Nacht!</p>
+    </body>
 </html>
