--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
         <header>
             <nav class="navbar">
                 <!-- LOGO -->
-                  <div class="logo">Chlöpfer Logo</div>
+                <img class="logo"
+                    src="img/SchiibeChloepfer_Logo_V2_text_transparent.svg"
+                    alt="Schiibe Chlöpfer Logo"
+                    onclick="load_content('home')"/>
               
-                  <!-- NAVIGATION MENU -->
-                  <ul class="nav-links">
-                    <!-- USING CHECKBOX HACK -->
-                    <input type="checkbox" id="checkbox_toggle" />
-                    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-                    <!-- NAVIGATION MENUS -->
-                    <div class="menu">
-                        <li onclick="load_content('home')">Home</li>
-                        <li onclick="load_content('kontakt')">Kontakt</li>
-                    </div>
-                  </ul>
-                </nav>
-                <h1>Schiibe Chlöpfer Zürcher Oberland</h1>
+                <!-- NAVIGATION MENU -->
+                <ul class="nav-links">
+                <!-- USING CHECKBOX HACK -->
+                <input type="checkbox" id="checkbox_toggle" />
+                <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                <!-- NAVIGATION MENUS -->
+                <div class="menu">
+                    <li onclick="load_content('home')">Home</li>
+                    <li onclick="load_content('kontakt')">Kontakt</li>
+                </div>
+                </ul>
+            </nav>
         </header>
         <main id="content">
             <!-- The content will be loaded here -->
         </main>
         <footer>
-            <p>Chlöpf dini Schiibe di ganzi Nacht, chlöpf sie di ganzi Nacht!</p>
+            
         </footer>
     </body>
 </html>
