--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <nav class="navbar">
                 <!-- Logo -->
-                <img class="logo"
+                <img class="logo" id="headerLogo"
                     src="img/SchiibeChloepfer_Logo_V2_text_transparent.svg"
                     alt="Schiibe Chlöpfer Logo"
                     onclick="load_content('home')"/>
@@ -31,7 +31,10 @@
             <!-- The content will be loaded here -->
         </main>
         <footer>
-            <!-- Place footer here -->
+            <img class="logo" id="footerLogo"
+                    src="img/SchiibeChloepfer_Logo_V2_text_transparent.svg"
+                    alt="Schiibe Chlöpfer Logo"
+                    onclick="load_content('home')"/>
         </footer>
     </body>
 </html>
