Add instagram link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <nav class="navbar">
-                <!-- Logo -->
+                <!-- Header-Logo -->
                 <img class="logo" id="headerLogo"
                     src="img/SchiibeChloepfer_Logo_V2_text_transparent.svg"
                     alt="Schiibe Chlöpfer Logo"
@@ -31,10 +31,16 @@
             <!-- The content will be loaded here -->
         </main>
         <footer>
+            <!-- Footer-Logo -->
             <img class="logo" id="footerLogo"
                     src="img/SchiibeChloepfer_Logo_V2_text_transparent.svg"
                     alt="Schiibe Chlöpfer Logo"
                     onclick="load_content('home')"/>
+            <!-- Instagram-Link -->
+            <a href="https://www.instagram.com/schiibe_chloepfer/" id="instagramLogo">
+                <img class="logo"  src="img/InstagramLogo.svg" alt="Instagram Logo"/>
+                <p>@schiibe_chloepfer</p>
+            </a>
         </footer>
     </body>
 </html>
