--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 
                 <!-- Navigation menus -->
                 <ul class="menu" id="menu">
-                    <li><a onclick="load_content('home')">Home</a></li>
-                    <li><a onclick="load_content('kontakt')"> Kontakt</a></li>
+                    <li"><a onclick="load_content('home')">Home</a></li>
+                    <li"><a onclick="load_content('kontakt')"> Kontakt</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,8 +37,8 @@
                     alt="Schiibe Chlöpfer Logo"
                     onclick="load_content('home')"/>
             <!-- Instagram-Link -->
-            <a href="https://www.instagram.com/schiibe_chloepfer/" id="instagramLogo">
-                <img class="logo"  src="img/InstagramLogo.svg" alt="Instagram Logo"/>
+            <a href="https://www.instagram.com/schiibe_chloepfer/" class="logo" id="instagramLogo">
+                <img src="img/InstagramLogo.svg" alt="Instagram Logo"/>
                 <p>@schiibe_chloepfer</p>
             </a>
         </footer>
