--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 
                 <!-- Navigation menus -->
                 <ul class="menu" id="menu">
-                    <li"><a onclick="load_content('home')">Home</a></li>
-                    <li"><a onclick="load_content('kontakt')"> Kontakt</a></li>
+                    <li><a onclick="load_content('home')">Home</a></li>
+                    <li><a onclick="load_content('kontakt')"> Kontakt</a></li>
                 </ul>
             </nav>
         </header>
