first content structure

--- a/html/home.html
+++ b/html/home.html
@@ -1,2 +1,23 @@
-<h1>Coming soon!</h1>
-<p>Chlöpf dini Schiibe di ganzi Nacht, chlöpf sie di ganzi Nacht!</p>
+<div class="backgroundImage">
+    <div class="backgroundOverlay"></div>¨
+</div>
+<div id="homeContent">
+    <div id="homeText">
+        <h1 id="homeTitle">
+            Schiibe Chlöpfer<br>
+            Züri Oberland
+        </h1>
+        <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            At vero eos et accusam et justo duo dolores et ea rebum.
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            At vero eos et accusam et justo duo dolores et ea rebum.
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </p>
+    </div>
+    <div>
+        <button type="button" class="homeCallToActionButton" id="homeCallToAction1">Call to action 1</button>
+        <button type="button" class="homeCallToActionButton" id="homeCallToAction1">Call to action 2</button>
+    </div>
+</div>
