Add htmls and responsiveness to latest changes

--- a/html/home.html
+++ b/html/home.html
@@ -1,23 +1,18 @@
-<div class="backgroundImage">
-    <div class="backgroundOverlay"></div>¨
-</div>
-<div id="homeContent">
-    <div id="homeText">
-        <h1 id="homeTitle">
-            Schiibe Chlöpfer<br>
-            Züri Oberland
-        </h1>
-        <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            At vero eos et accusam et justo duo dolores et ea rebum.
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            At vero eos et accusam et justo duo dolores et ea rebum.
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
-    </div>
-    <div>
-        <button type="button" class="homeCallToActionButton" id="homeCallToAction1">Call to action 1</button>
-        <button type="button" class="homeCallToActionButton" id="homeCallToAction1">Call to action 2</button>
+<div class="background">
+    <div class="backgroundOverlay">
+        <div class="foreground">
+            <div class="foregroundText">
+                <h1 class="foregroundTitle">
+                    Schiibe Chlöpfer Züri Oberland
+                </h1>
+                <p class="foregroundDescription">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                    At vero eos et accusam et justo duo dolores et ea rebum.
+                </p>
+            </div>
+            <div class="foregroundButtonArea">
+                <button type="button" class="foregroundCallToActionButton" onclick="load_content('join')">Jetzt Mitglied werden!</button>
+            </div>
+        </div>
     </div>
 </div>
