--- a/html/home.html
+++ b/html/home.html
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="background" id="homeJoinBackground">
     <div class="backgroundOverlay">
         <div class="foreground">
             <div class="foregroundText">
