cleanup, add active passive to mail

--- a/html/join.html
+++ b/html/join.html
@@ -30,7 +30,7 @@
                     <label for="joinFormPassive">Ich möchte mich als passives Mitglied anmelden</label>
                 </div>
 
-                <div class="labelCheckboxCombo">
+                <div class="labelCheckboxCombo" id="joinFormConsentCombo">
                     <input type="checkbox" id="joinFormConsent" name="joinFormConsent" required>
                     <label for="joinFormConsent">Ich habe verstanden, dass ich mit dem Absenden dieses Formulars dem Verein Schiibe Chlöpfer Züri Oberland hiermit beitrete und die Anmeldung mich zum Bezahlen des Mitgliederbeitrags verpflichte.</label>
                 </div>
