--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -1,5 +1,5 @@
-<h2>Kontakt</h2>
-<address>
+<h2 class="temp">Kontakt</h2>
+<address class="temp">
     Andreas Erni <br>
     Grüningerstrasse 6 <br>
     8620 Wetzikon <br>
