--- a/html/join.html
+++ b/html/join.html
@@ -1,4 +1,39 @@
-<div class="background" id="joinBackground">
+<div class="background" id="joinConditionsBackground">
+    <div class="backgroundOverlay">
+        <div class="foreground">
+            <div class="foregroundText">
+                <h1 class="foregroundTitle">
+                    Die Mitgliedschaft
+                </h1>
+                <p class="foregroundDescription">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                    At vero eos et accusam et justo duo dolores et ea rebum.
+                </p>
+                <table id="priceTable">
+                    <tr><th colspan="2"><h2>Preise</h2></th></tr>
+                    <tr>
+                        <th>Mitgliedsart</th>
+                        <th>Preis</th>
+                    </tr>
+                    <tr>
+                        <td>Aktivmitglied</td>
+                        <td>CHF 100.- / Jahr</td>
+                    </tr>
+                    <tr>
+                        <td>Aktivmitglied unter 16 Jahre</td>
+                        <td>CHF 50.- / Jahr</td>
+                    </tr>
+                    <tr>
+                        <td>Passivmitglied</td>
+                        <td>CHF 200.- / Jahr</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="divider"></div>
+<div class="background" id="joinFormBackground">
     <div class="backgroundOverlay">
         <div class="foreground">
             <form id="joinForm" class="applicationForm" onsubmit="sendEmail()" action="javascript:void(0);">
