complete join form, compress images further

--- a/html/course.html
+++ b/html/course.html
@@ -1,1 +1,1 @@
-<h1 class="temp">Hier wirst du in naher Zukunft Infos über unseren Kurs finden.</h1>
+<h1 class="temp">Hier wirst du in naher Zukunft Infos über unseren neuen Kurs finden.</h1>
