--- a/html/join.html
+++ b/html/join.html
@@ -27,6 +27,10 @@
                         <td>Passivmitglied</td>
                         <td>CHF 200.- / Jahr</td>
                     </tr>
+                    <tr>
+                        <td>Gönner</td>
+                        <td>Betrag frei wählbar</td>
+                    </tr>
                 </table>
             </div>
         </div>
@@ -37,23 +41,29 @@
     <div class="backgroundOverlay">
         <div class="foreground">
             <form id="joinForm" class="applicationForm" onsubmit="sendEmail()" action="javascript:void(0);">
-                <label for="joinFormFirstName">Vorname</label>
-                <input type="text" class="joinFormInput" id="joinFormFirstName" name="joinFormFirstName" required>
+                <label for="joinFormFirstName">Vorname *</label>
+                <input type="text" class="joinFormInput" id="joinFormFirstName" name="joinFormFirstName" placeholder="Schiibmund" required>
 
-                <label for="joinFormLastName">Nachname</label>
-                <input type="text" class="joinFormInput" id="joinFormLastName" name="joinFormLastName" required>
+                <label for="joinFormLastName">Nachname *</label>
+                <input type="text" class="joinFormInput" id="joinFormLastName" name="joinFormLastName" placeholder="Chlöpfer" required>
 
-                <label for="joinFormAddress">Adresse</label>
-                <input type="text" class="joinFormInput" id="joinFormAddress" name="joinFormAddress" required>
+                <label for="joinFormAddress">Adresse *</label>
+                <input type="text" class="joinFormInput" id="joinFormAddress" name="joinFormAddress" placeholder="Chlöpferstrasse 7" required>
 
-                <label for="joinFormPostcode">PLZ</label>
-                <input type="number" class="joinFormInput" id="joinFormPostcode" name="joinFormPostcode" required>
+                <label for="joinFormPostcode">PLZ *</label>
+                <input type="number" class="joinFormInput" id="joinFormPostcode" name="joinFormPostcode" placeholder="6969" min="1000" max="9999" required>
 
-                <label for="joinFromCity">Ort</label>
-                <input type="text" class="joinFormInput" id="joinFormCity" name="joinFormCity" required>
+                <label for="joinFromCity">Ort *</label>
+                <input type="text" class="joinFormInput" id="joinFormCity" name="joinFormCity" placeholder="Chlöpfhausen" required>
 
-                <label for="joinFormMail">E-Mail</label>
-                <input type="email" class="joinFormInput" id="joinFormMail" name="joinFormMail" required>
+                <label for="joinFormMail">E-Mail *</label>
+                <input type="email" class="joinFormInput" id="joinFormMail" name="joinFormMail" placeholder="info@schiibe-chloepfer.ch" required pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$">
+
+                <label for="joinFormBirthday">Geburtsdatum *</label>
+                <input type="date" class="joinFormInput" id="joinFormBirthday" name="joinFormBirthday" placeholder="01.10.2023" required>
+
+                <label for="joinFromMessage">Hast du noch Fragen?</label>
+                <input type="text" class="joinFormInput" id="joinFromMessage" name="joinFromMessage" placeholder="Wann chlöpfts?">
 
                 <div class="labelCheckboxCombo">
                     <input type="radio" class="joinFormInput" id="joinFormActive" name="joinFormAP" required>
@@ -65,9 +75,18 @@
                     <label for="joinFormPassive">Ich möchte mich als passives Mitglied anmelden</label>
                 </div>
 
+                <div class="labelCheckboxCombo">
+                    <input type="radio" class="joinFormInput" id="joinFormGoenner" name="joinFormAP" required>
+                    <label for="joinFormGoenner">Ich möchte Gönner werden</label>
+                </div>
+
                 <div class="labelCheckboxCombo" id="joinFormConsentCombo">
                     <input type="checkbox" id="joinFormConsent" name="joinFormConsent" required>
-                    <label for="joinFormConsent">Ich habe verstanden, dass ich mit dem Absenden dieses Formulars dem Verein Schiibe Chlöpfer Züri Oberland hiermit beitrete und die Anmeldung mich zum Bezahlen des Mitgliederbeitrags verpflichte.</label>
+                    <label for="joinFormConsent">
+                        Ich habe verstanden, dass ich mit dem Absenden dieses Formulars dem 
+                        Verein Schiibe Chlöpfer Züri Oberland hiermit beitrete und die Anmeldung
+                        mich zum Bezahlen des Mitgliederbeitrags verpflichte. *
+                    </label>
                 </div>
 
                 <button type="submit" class="foregroundCallToActionButton" id="joinFormButton" onclick="validateJoinForm()">Absenden</button>
