add contact background and button

--- a/html/course.html
+++ b/html/course.html
@@ -1,1 +1,16 @@
-<h1 class="temp">Hier wirst du in naher Zukunft Infos über unseren neuen Kurs finden.</h1>
+<div class="background" id="courseBackground">
+    <div class="backgroundOverlay">
+        <div class="foreground">
+            <div class="foregroundText">
+                <h1 class="foregroundTitle">
+                    Hier wirst du in naher Zukunft Infos über unseren neuen Kurs finden.
+                </h1>
+                <p class="foregroundDescription">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                    At vero eos et accusam et justo duo dolores et ea rebum.
+                </p>
+            </div>
+            <iframe id="udiscFrame" height="100%" width="100%" src="//www.udisc.com/courses/milandia-YEAG" frameborder="1" allowfullscreen title="Unser Heimkurs"></iframe>
+        </div>
+    </div>
+</div>
