--- a/html/join.html
+++ b/html/join.html
@@ -3,7 +3,7 @@
         <div class="foreground">
             <div class="foregroundText">
                 <h1 class="foregroundTitle">
-                    Die Mitgliedschaft
+                    Werde Mitglied
                 </h1>
                 <p class="foregroundDescription">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
