--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -1,7 +1,25 @@
-<h2 class="temp">Kontakt</h2>
-<address class="temp">
-    Andreas Erni <br>
-    Grüningerstrasse 6 <br>
-    8620 Wetzikon <br>
-    info@schiibe-chloepfer.ch
-</address>
+<div class="background" id="contactBackground">
+    <div class="backgroundOverlay">
+        <div class="foreground">
+            <div class="foregroundText">
+                <h1 class="foregroundTitle">
+                    Kontakt
+                </h1>
+                <p class="foregroundDescription">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                    At vero eos et accusam et justo duo dolores et ea rebum.
+                </p>
+                <address id="contactAddress">
+                    Schiibe Chlöpfer Züri Oberland <br>
+                    Andreas Erni <br>
+                    Grüningerstrasse 6 <br>
+                    8620 Wetzikon <br>
+                    info@schiibe-chloepfer.ch
+                </address>
+            </div>
+            <div class="foregroundButtonArea">
+                <a href="mailto:info@schiibe-chloepfer.ch" class="foregroundCallToActionButton" id="writeUsButton">Melde dich bei uns!</a>
+            </div>
+        </div>
+    </div>
+</div>
