style course page

--- a/html/course.html
+++ b/html/course.html
@@ -10,7 +10,7 @@
                     At vero eos et accusam et justo duo dolores et ea rebum.
                 </p>
             </div>
-            <iframe id="udiscFrame" height="100%" width="100%" src="//www.udisc.com/courses/milandia-YEAG" frameborder="1" allowfullscreen title="Unser Heimkurs"></iframe>
+            <iframe id="udiscIFrame" src="//www.udisc.com/courses/milandia-YEAG" title="Unser Heimkurs"></iframe>
         </div>
     </div>
 </div>
