fill in a few descriptions

--- a/html/course.html
+++ b/html/course.html
@@ -6,8 +6,8 @@
                     Hier wirst du in naher Zukunft Infos über unseren neuen Kurs finden.
                 </h1>
                 <p class="foregroundDescription">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                    At vero eos et accusam et justo duo dolores et ea rebum.
+                    Mit Unterstützung des Swiss Disc Golf Verbands über das Projekt PARKED! und den örtlichen Institutionen realisieren
+                    wir für dich und für alle Interessierten aus der Region einen neuen Kurs. Der „Milandia-Nachfolger“ ist bereits in Planung…  
                 </p>
             </div>
             <iframe id="udiscIFrame" src="//www.udisc.com/courses/milandia-YEAG" title="Unser Heimkurs" allowfullscreen></iframe>
