--- a/html/join.html
+++ b/html/join.html
@@ -6,11 +6,11 @@
                     Werde Mitglied
                 </h1>
                 <p class="foregroundDescription">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                    At vero eos et accusam et justo duo dolores et ea rebum.
+                    Du möchtest bereits bei der Entstehung und Umsetzung des Kurses dabei sein?
+                    Dann unterstütze uns noch heute und werde ein Schiibe Chlöpfer!
                 </p>
                 <table id="priceTable">
-                    <tr><th colspan="2"><h2>Preise</h2></th></tr>
+                    <tr><th colspan="2"><h2>Preis / Kalenderjahr</h2></th></tr>
                     <tr>
                         <th>Mitgliedsart</th>
                         <th>Preis</th>
@@ -59,6 +59,9 @@
                 <label for="joinFormMail">E-Mail *</label>
                 <input type="email" class="joinFormInput" id="joinFormMail" name="joinFormMail" placeholder="info@schiibe-chloepfer.ch" required pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$">
 
+                <label for="joinFormPhoneNumber">Telefonnummer *</label>
+                <input type="tel" class="joinFormInput" id="joinFormPhoneNumber" name="joinFormPhoneNumber" placeholder="0797776969" required pattern="[0-9]{10}">
+
                 <label for="joinFormBirthday">Geburtsdatum *</label>
                 <input type="date" class="joinFormInput" id="joinFormBirthday" name="joinFormBirthday" placeholder="01.10.2023" required>
 
@@ -83,9 +86,8 @@
                 <div class="labelCheckboxCombo" id="joinFormConsentCombo">
                     <input type="checkbox" id="joinFormConsent" name="joinFormConsent" required>
                     <label for="joinFormConsent">
-                        Ich habe verstanden, dass ich mit dem Absenden dieses Formulars dem 
-                        Verein Schiibe Chlöpfer Züri Oberland hiermit beitrete und die Anmeldung
-                        mich zum Bezahlen des Mitgliederbeitrags verpflichte. *
+                        Ich habe verstanden, dass ich mit dem Absenden dieses Formulars dem Verein Schiibe Chlöpfer Züri Oberland
+                        beitrete und die Rechnung des Mitgliederbeitrags für das aktuelle Kalenderjahr ausgelöst wird. *
                     </label>
                 </div>
 
