--- a/html/home.html
+++ b/html/home.html
@@ -6,8 +6,7 @@
                     Schiibe Chlöpfer Züri Oberland
                 </h1>
                 <p class="foregroundDescription">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                    At vero eos et accusam et justo duo dolores et ea rebum.
+                    Dein neuer Disc Golf Verein aus und für das Züri Oberland.
                 </p>
             </div>
             <div class="foregroundButtonArea">
