--- a/html/join.html
+++ b/html/join.html
@@ -9,7 +9,7 @@
                     Du möchtest bereits bei der Entstehung und Umsetzung des Kurses dabei sein?
                     Dann unterstütze uns noch heute und werde ein Schiibe Chlöpfer!
                 </p>
-                <table id="priceTable">
+                <table id="priceTable" class="contentTable">
                     <tr><th colspan="2"><h2>Preis / Kalenderjahr</h2></th></tr>
                     <tr>
                         <th>Mitgliedsart</th>
