--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -6,20 +6,35 @@
                     Kontakt
                 </h1>
                 <p class="foregroundDescription">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                    At vero eos et accusam et justo duo dolores et ea rebum.
+                    Wenn du uns Unterstützen möchtest, eine Frage, eine Idee oder ein
+                    generelles Anliegen hast, kannst du dich gerne jederzeit bei uns melden!
                 </p>
-                <address id="contactAddress">
+                <address class="contactAddress">
                     Schiibe Chlöpfer Züri Oberland <br>
-                    Andreas Erni <br>
-                    Grüningerstrasse 6 <br>
-                    8620 Wetzikon <br>
                     info@schiibe-chloepfer.ch
                 </address>
+                <div class="foregroundButtonArea">
+                    <a href="mailto:info@schiibe-chloepfer.ch" class="foregroundCallToActionButton" id="writeUsButton">Melde dich bei uns!</a>
+                </div>
+                <div id="personalAddresses">
+                    <address class="contactAddress">
+                        Andreas Erni <br>
+                        Grüningerstrasse 6 <br>
+                        8620 Wetzikon <br>
+                    </address>
+                    <address class="contactAddress">
+                        Daniel Ringgenberg <br>
+                        Lindenstrasse 6 <br>
+                        8620 Wetzikon <br>
+                    </address>
+                    <address class="contactAddress">
+                        Lukas Hefti <br>
+                        Turicumstrasse 38 <br>
+                        8610 Uster <br>
+                    </address>
+                </div>
             </div>
-            <div class="foregroundButtonArea">
-                <a href="mailto:info@schiibe-chloepfer.ch" class="foregroundCallToActionButton" id="writeUsButton">Melde dich bei uns!</a>
-            </div>
+            
         </div>
     </div>
 </div>
