--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a onclick="load_content('home')">Home</a></li>
                 <li><a onclick="load_content('join')">Anmeldung</a></li>
                 <li><a onclick="load_content('course')">Kurs</a></li>
+                <li><a onclick="load_content('news')">News</a></li>
                 <li><a onclick="load_content('kontakt')">Kontakt</a></li>
             </ul>
         </header>
