--- a/html/join.html
+++ b/html/join.html
@@ -60,13 +60,13 @@
                 <input type="email" class="joinFormInput" id="joinFormMail" name="joinFormMail" placeholder="info@schiibe-chloepfer.ch" required pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$">
 
                 <label for="joinFormPhoneNumber">Telefonnummer *</label>
-                <input type="tel" class="joinFormInput" id="joinFormPhoneNumber" name="joinFormPhoneNumber" placeholder="0797776969" required pattern="[0-9]{10}">
+                <input type="tel" class="joinFormInput" id="joinFormPhoneNumber" name="joinFormPhoneNumber" placeholder="0794206969" required pattern="[0-9]{10}">
 
                 <label for="joinFormBirthday">Geburtsdatum *</label>
                 <input type="date" class="joinFormInput" id="joinFormBirthday" name="joinFormBirthday" placeholder="01.10.2023" required>
 
                 <label for="joinFromMessage">Hast du noch Fragen?</label>
-                <input type="text" class="joinFormInput" id="joinFromMessage" name="joinFromMessage" placeholder="Wann chlöpfts?">
+                <input type="text" class="joinFormInput" id="joinFromMessage" name="joinFromMessage" placeholder="Wänn chlöpfemer di nächsti schiibe?">
 
                 <div class="labelCheckboxCombo">
                     <input type="radio" class="joinFormInput" id="joinFormActive" name="joinFormAP" required>
