--- a/html/news.html
+++ b/html/news.html
@@ -6,13 +6,9 @@
                     News
                 </h1>
                 <p class="foregroundDescription">
-                    Hier findest du die neusten Updates zu unserem Verein und unseren Projekten.
+                    Hier findest du die neusten Updates und vergangenen Meilensteine zu unserem Verein und unseren Projekten.
                 </p>
                 <table id="newsTable" class="contentTable">
-                    <tr>
-                        <th>Datum</th>
-                        <th>Beschreibung</th>
-                    </tr>
                     <tr>
                         <td>01.10.2023</td>
                         <td>Offizielle Gründung des Vereins Schiibe Chlöpfer Züri Oberland</td>
