Add club address and change zip of daniel

--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -11,10 +11,12 @@
                 </p>
                 <address class="contactAddress">
                     Schiibe Chlöpfer Züri Oberland <br>
+                    Turicumstrasse 38 <br>
+                    8610 Uster <br>
                     info@schiibe-chloepfer.ch
                 </address>
                 <div class="foregroundButtonArea">
-                    <a href="mailto:info@schiibe-chloepfer.ch" class="foregroundCallToActionButton" id="writeUsButton">Melde dich bei uns!</a>
+                    <a href="mailto:info@schiibe-chloepfer.ch" class="foregroundCallToActionButton" id="writeUsButton">Schreib uns!</a>
                 </div>
                 <div id="personalAddresses">
                     <address class="contactAddress">
@@ -25,7 +27,7 @@
                     <address class="contactAddress">
                         Daniel Ringgenberg <br>
                         Lindenstrasse 6 <br>
-                        8620 Wetzikon <br>
+                        8623 Wetzikon <br>
                     </address>
                     <address class="contactAddress">
                         Lukas Hefti <br>
