--- a/html/news.html
+++ b/html/news.html
@@ -14,22 +14,17 @@
                             <td>01.10.2023</td>
                             <td>Offizielle Gründung des Vereins Schiibe Chlöpfer Züri Oberland</td>
                         </tr>
-                        
                         <tr>
                             <td>09.09.2023</td>
-                            <td>Erhalt der Unterlagenpakets des Verbands</td>
+                            <td>Erhalt des Unterlagenpakets des Verbands</td>
                         </tr>
                         <tr>
                             <td>08.09.2023</td>
                             <td>Erstellung des Instagram Profils</td>
                         </tr>
                         <tr>
-                            <td>08.09.2023</td>
-                            <td>Erstes Telefonat mit dem Leiter Ressort Infrastruktur des Projekt PARKED!</td>
-                        </tr>
-                        <tr>
                             <td>06.09.2023</td>
-                            <td>Kontaktaufnahme mit Projekt PARKED!</td>
+                            <td>Kontaktaufnahme mit den Verantwortlichen des Projekts PARKED!</td>
                         </tr>
                         <tr>
                             <td>03.09.2023</td>
